<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation = "vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/edittext_studentid"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:background="#ffffff"
        android:hint="@string/StudentID"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/Password"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/Not_SignUp" />

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:text="@string/Register"
        android:paddingEnd="10dp" />

    </LinearLayout>
</LinearLayout>