<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".DayOptionActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="What days are your classes?"
        android:textColor="#123456"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="227dp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/tuesday" />
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/wednesday" />
    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:text="@string/thursday" />
    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="Friday" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:text = "@string/Select"/>





</RelativeLayout>
